src/index.css
/* ... */
.ps-menu-button.ps-open {
  background: #24367e !important;
  color: white !important;
}

.header-menu li {
  opacity: 0.8;
  border-bottom: 3px solid transparent;
  margin-bottom: 0 !important;
}

.header-menu li.active, .header-menu li:hover {
  opacity: 1;
}

.red-bg {
  background: rgba(231,6,84, 1) !important;
  color: #ffffff !important;
}

.red-bg.btn {
  border-color: rgb(187, 2, 67) !important;
}

.red-text {
  color: rgb(187, 2, 67) !important;
}

.change-display {
  flex-wrap: nowrap;
  overflow: auto;
  scrollbar-width: none;
}

.std-medium-width-block {
  max-width: 500px;
  margin-right: auto;
  margin-left: auto;
  border: 1px solid rgba(0,0, 0, 0.051);
  padding: 20px;
  border-radius: 5px;
  box-shadow: 0 0 2px 0px rgba(0,0,0,0.1);
  margin-top: 20px;
}

.input-field {
  margin-bottom: 20px;
}

label {
  text-transform: capitalize;
}

.accordion__panel {
  padding-left: 15px !important;
  padding-right: 15px !important;
}

.big-icon-container {
  position: relative;
  display: flex;
  align-items: center;
}

.big-icon-arrows {
  padding: 8px;
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: transparent;
}

.big-icon-list {
  display: flex;
  gap: 1rem;
}
::-webkit-scrollbar-thumb {
  background: #24367e;
  border-radius: 4px;
  box-shadow: rgba(0,0,0.1);
}
::-webkit-scrollbar-track {
  background: #e2e2e2;
}
.big-icon-item {
  padding: 10px 4px 4px;
  align-items: center;
  color: #ddd;
  font-weight: 600;
  text-align: center;
  position: relative;
  border-bottom: 3px solid transparent;
  margin-bottom: 0 !important;
  display: flex !important;
  justify-content: center;
  opacity: 0.9;
  transition: opacity 0.2s, color 0.2s;
}

.big-icon-icon {
  
}

.big-icon-item.active {
  opacity: 1; 
}

.big-icon-item.active::after {
  content: "";
  position: absolute;
  bottom: -3px;
  left: 0;
  right: 0;
  height: 3px;
  background-color: #ffffff;
  opacity: 1;
}

.big-icon-item:not(.active)::after {
  opacity: 0;
  transition: opacity 0.2s;
}

.big-icon-name {
  /* font-size: 0.85rem; */
  color: #ffffff;
  opacity: 0.7;
  font-weight: 400;
  flex-flow: wrap;
  display: flex;
  white-space: nowrap;
  flex-wrap: wrap;
}

.big-icon-icon img {
  width: 24px;
  height: 24px;
  opacity: 0.8; 
  transition: opacity 0.2s, filter 0.2s;
}

.big-icon-item.active .big-icon-name {
  color: #ffffff;
}

.big-icon-item.active .big-icon-icon img {
  opacity: 1; /* Fully visible icon on active */
  filter: brightness(0) invert(1); /* Makes the icon appear white */
}


.big-icon-scrollbar-hide {
  -ms-overflow-style: none;  /* IE and Edge */
  scrollbar-width: none;  /* Firefox */
}

.big-icon-scrollbar-hide::-webkit-scrollbar {
  display: none; /* Chrome, Safari, and Opera */
}

.carousel-control-next, .carousel-control-prev {
  
  width: 7%;
}

.carousel-control-next-icon, .carousel-control-prev-icon {
  background-color: rgba(0,0,0,0.6);
  /* padding: 5p; */
  border-radius: 100%;
  /* border: 13px solid rgba(0,0,0,0.6); */
}

.carousel-control-next-icon, .carousel-control-prev-icon {
  display: inline-block;
  width: 4rem;
  height: 4rem;
  background-repeat: no-repeat;
  background-position: 50%;
  background-size: 100% 100%;
}

.no-bet-btn:hover, button.no-bet-btn, button.no-bet-btn:hover, .no-bet-btn, button.locked-button, .locked-button, button.locked-button:hover {
  background-color: #dddddd !important;
  min-width: 50px;
  min-height: 40px;
  text-align: center;
  opacity: 0.4;
  color: #666666 !important;
  border: 1px solid #cccccc;
}

.slots-filter {
  /* border: 1px solid #30353b; */
  box-sizing: border-box;
  height: 100vh;
  left: 0;
  margin-right: .0;
  min-width: 16.375em;
  overflow-y: auto;
  padding-bottom: 7rem;
  /* position: fixed; */
  width: 16.375em;
}

.slots-content {
  height: 100vh;
  overflow-x: hidden;
  overflow-y: auto;
  padding-bottom: 10rem;
  /* position: fixed; */
  right: 0;
  width: calc(100% - 16.25em);
}

@media screen and (min-width: 1160px) {
  .no-body-header-spacing.amt {
    /* margin-top: 130px !important; */
  }
}

.prematch-started {
  opacity: 0.7;
}

@media screen and (max-width: 648px) {

  .big-icon-item {
    padding: 5px 4px 4px;
    
}
.big-icon-icon img {
  width: 20px;
  height: 20px;
}

.top-login-btn {
  background: rgba(255, 255, 255, 0.2);
  border: 1px solid #6c5cc0 !important;
  font-weight: 500;
  padding: 5px 15px !important;
}
.header-login-links .onboard {
  margin-top: 2px !important;
}

.amt {
  /* margin-top: 75px; */
  margin-top: 126px;
}

.carousel-control-next-icon, .carousel-control-prev-icon {
  
  width: 2rem;
  height: 2rem;
  padding: 7px;
}
.popular-game {
  max-width: 83px;
  display: inline-block;
  padding-right: 0;
  padding-left: 2px;
}

.no-sports-wide-width {
 width: 100%; 
}

.highlights-board {
  padding: 5px 0px;
}

.won-gif-container {
  position: absolute;
  top: 20px; 
  left: 50%;
  transform: translateX(-50%);
  z-index: 10;
  width: 50%; 
  display: flex;
  justify-content: center; 
}

.won-gif {
  width: 100%; 
  height: 200px; 
}


}

.no-header {
  margin-top: 0 !important;
}

.live-unstarted {
  /* display: none !important; */
}

.inactive-odds-btn {
  background: #cccccc !important;
}

.inactive-odds-btn .et.label {
  float: left;
  margin-left: 9px;
  text-transform: uppercase;
  font-size: 12px;
  min-width: 50%;
  text-align: left;
  opacity: 0.5;
}

.inactive-odds-btn .et {
  margin-bottom: 0;
}

.ps-menu-root .active, .ps-menu-button:focus{
  background: #24367e !important;
}

.ps-menu-root .active a .topl {
  color: white;
}


.ps-menu-root, .ps-menu-root a, .ps-menu-button .topl {
  color: #69819a;
}

.game-detail-not-available {

  margin-top: 10%;
  margin-bottom: 10px;
  text-align: center;
  font-size: 20px;
  line-height: 1.5;
}
.game-detail-not-available a {
  font-style: italic;
  color: blue;
  -webkit-text-decoration: dotted;
  text-decoration: underline;
  margin-top: 15px !important;
  display: block;
}
/* ... */

